syntax = "proto3";

package internal;

import "google/protobuf/empty.proto";

service Node {
  rpc SelfID(google.protobuf.Empty) returns (NodeID) {}
  rpc BalanceOf(NodeID) returns (Balance) {}
  rpc SendTo(TransferRequest) returns (TransferResponse) {}
  rpc Transaction(TransactionRequest) returns (TransactionResponse) {}
}

message NodeID {
  string hex = 1;
}

message Balance {
  uint64 amount = 1;
}

message TransferRequest{
  uint64 amount = 1;
  NodeID receiver = 2;
}

message TransferResponse {
  string hex = 1;
}

message TransactionRequest {
  string hex = 1;
}

message TransactionResponse {
  uint64 amount = 1;
  NodeID receiver = 2;
  NodeID sender = 3;
  bool confirmed = 4;
}

